@@ -274,6 +274,11 @@
 "advancements.overpowered.null_block.title": "Blok af Mørke",
 "advancements.overpowered.null_block.description": "Lav en nulblok",
 
+"advancements.overpowered.gem_converter.title": "Gem Converter",
+"advancements.overpowered.gem_converter.description": "Lav en perle konverter",
+"advancements.overpowered.convert_a_thousand_gems.title": "Master Converter",
+"advancements.overpowered.convert_a_thousand_gems.description": "Konverter tusind perler.",
+
 "advancements.overpowered.craft_laser.title": "Laser",
 "advancements.overpowered.craft_laser.description": "Lav en lasermaskine.",
 "advancements.overpowered.fire_laser.title": "Skyd en laser",
