@@ -274,6 +274,11 @@
 "advancements.overpowered.null_block.title": "Blocco Nullo",
 "advancements.overpowered.null_block.description": "Crea un blocco Nullo",
 
+"advancements.overpowered.gem_converter.title": "Convertitore di gemme",
+"advancements.overpowered.gem_converter.description": "Crea un convertitore di gemme",
+"advancements.overpowered.convert_a_thousand_gems.title": "convertitore esperto",
+"advancements.overpowered.convert_a_thousand_gems.description": "Converti mille gemme.",
+
 "advancements.overpowered.craft_laser.title": "Laser",
 "advancements.overpowered.craft_laser.description": "Crea una macchina laser.",
 "advancements.overpowered.fire_laser.title": "Attività laser",
