@@ -274,6 +274,11 @@
 "advancements.overpowered.null_block.title": "Bloco Nulo",
 "advancements.overpowered.null_block.description": "Faça um bloco nulo",
 
+"advancements.overpowered.gem_converter.title": "Conversor de gemas",
+"advancements.overpowered.gem_converter.description": "Crie um conversor de gemas",
+"advancements.overpowered.convert_a_thousand_gems.title": "Conversor Mestre",
+"advancements.overpowered.convert_a_thousand_gems.description": "Converta mil joias.",
+
 "advancements.overpowered.craft_laser.title": "Laser",
 "advancements.overpowered.craft_laser.description": "Crie uma máquina a laser.",
 "advancements.overpowered.fire_laser.title": "Atividade a laser",
