@@ -274,6 +274,11 @@
 "advancements.overpowered.null_block.title": "Nulový blok",
 "advancements.overpowered.null_block.description": "urobte nulový blok",
 
+"advancements.overpowered.gem_converter.title": "prevodník drahokamov",
+"advancements.overpowered.gem_converter.description": "Vytvorte konvertor drahokamov",
+"advancements.overpowered.convert_a_thousand_gems.title": "odborný prevodník",
+"advancements.overpowered.convert_a_thousand_gems.description": "Premeniť tisíc drahokamov.",
+
 "advancements.overpowered.craft_laser.title": "Laser",
 "advancements.overpowered.craft_laser.description": "Vyrobte laserový stroj.",
 "advancements.overpowered.fire_laser.title": "Laserová aktivita",
