@@ -274,6 +274,11 @@
 "advancements.overpowered.null_block.title": "Khối không có gì",
 "advancements.overpowered.null_block.description": "tạo một khối rỗng",
 
+"advancements.overpowered.gem_converter.title": "Công cụ chuyển đổi đá quý",
+"advancements.overpowered.gem_converter.description": "Tạo một công cụ chuyển đổi đá quý",
+"advancements.overpowered.convert_a_thousand_gems.title": "chuyên gia chuyển đổi",
+"advancements.overpowered.convert_a_thousand_gems.description": "Chuyển đổi một nghìn viên ngọc.",
+
 "advancements.overpowered.craft_laser.title": "Laser",
 "advancements.overpowered.craft_laser.description": "Chế tạo máy laser.",
 "advancements.overpowered.fire_laser.title": "Lửa Laser",
